--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "stylus": "^0.52.4",
+    "stylus-loader": "^2.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "stylus-loader": "^2.5.0",
+    "stylus": "0.52.4",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
