--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "mock": "json-server --watch mock/db.json",
+    "mockdev": "npm run mock & npm run dev"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "stylus": "^0.52.4",
     "stylus-loader": "^2.5.1",
     "vue": "^2.5.2",
