--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "stylus": "^0.52.4",
-    "stylus-loader": "^2.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "stylus-loader": "^2.5.0",
-    "stylus": "0.52.4",
+    "style-loader": "^0.19.0",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.7.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
